--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,44 @@
-.env.local
-/data/
+# Positron-specific
+.venv/
+.env
+.positron/
+.Rproj.user/
+.Rhistory
+.RData
+.Ruserdata
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+.ipynb_checkpoints
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+
+# VS Code / Positron
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+# OS specific
+.DS_Store
+Thumbs.db
+
+# Temporary and data files
+temp/
+*.log
+logs/
+.ipynb_checkpoints/
